--- a/Thesis.tex
+++ b/Thesis.tex
@@ -121,12 +121,12 @@
 \frontmatter % Use roman page numbering style (i, ii, iii, iv...) for the preamble pages
 
 \puttitle{
-	title=Investigating Changes in White Matter Microstructure in Chemobrain Using Diffusion MRI Representations, % Title of the thesis
+	title=White Matter Degeneration in Chemotherapy-Related Cognitive Impairment Using Constrained Spherical Deconvolution, % Title of the thesis
 	name=Petra Cipolla, % Author Name and Surname
 	course= Biomedical Engineering - Ingegneria Biomedica, % Study Programme (in Italian)
-	ID  = 10698521,  % Student ID number (numero di matricola)
-	advisor= Prof. Giuseppe Baselli, % Supervisor name
-	coadvisor={Prof. Daan Chrisitaens, Siebe Leysen}, % Co-Supervisor name, remove this line if there is none
+	ID  = 226462,  % Student ID number (numero di matricola)
+	advisor= {Prof. Giuseppe Baselli, Prof. Daan Chrisitaens}, % Supervisor name
+	coadvisor={Siebe Leysen}, % Co-Supervisor name, remove this line if there is none
 	academicyear={2024-25},  % Academic Year
 } % These info will be put into your Title page 
 
@@ -138,22 +138,21 @@
 
 % ABSTRACT IN ENGLISH
 \chapter*{Abstract} 
-
-Diffusion MRI offers a non-invasive method to study white matter (WM) microstructure by probing the motion of water molecules. Constrained Spherical Deconvolution (CSD) effectively extracts WM fibre orientation information from diffusion data by disentangling the contributions of different fibre bundles within a voxel by estimating the Orientation Distribution Function (ODF). Compared to the state-of-the-art method Multi-Tissue CSD (MT-CSD), which uses pre-defined tissue-specific response functions, Local Response Function Estimation in Spherical Deconvolution (LoRE-SD) estimates response functions locally within each voxel, resulting in unit-normalized ODFs. This normalization allows different scalings to be applied, each potentially emphasizing distinct tissue compartments. 
-From the ODFs, we can extract fixels, each representing a population of fibres within a voxel running in the same direction. Fixel-Based Analysis (FBA) is a framework that assigns metrics to these fixels and enables group comparisons.
-In this work, we used FBA to study chemobrain, a condition affecting chemotherapy-treated cancer survivors, who often experience cognitive impairment. Our goal was to investigate whether LoRE-SD could be used effectively in a FBA and identify potential differences between chemotherapy-treated breast cancer patients and control groups. ODFs were found using both MT-CSD and LoRE-SD, with multiple scaling strategies applied to the latter to emphasize intra-axonal content, anisotropy, or WM volume fraction. The results showed that the significant findings varied depending on the ODF modulation used with LoRE-SD, highlighting its flexibility in revealing different microstructural features. Notably, the fornix showed a significant increase in apparent fibre density in patients compared to controls, possibly reflecting compensatory mechanisms or network reorganization in response to chemotherapy-induced neuroinflammation. However, its thinness and proximity to the ventricles raise the possibility of CSF partial volume effects or registration errors. This thesis highlights the potential of LoRE-SD and FBA to study WM alterations, though interpretation remains difficult without a clearer understanding of the pathology.
-\\
+With the number of cancer survivors increasing, it is important to study treatment effects on quality of life. Chemotherapy is a common treatment strategy, but cognitive impairment has been reported in some patients after treatment, sometimes persisting for months. These symptoms, often called “chemobrain,” are thought to involve white matter changes, making diffusion MRI a valuable tool to investigate their location and nature.
+In this thesis, we analyzed diffusion MRI data from three age-matched groups of women: breast cancer patients treated with chemotherapy (CP), patients treated with other therapies (CM), and healthy controls (HC). We applied Constrained Spherical Deconvolution (CSD), which models the diffusion signal as the convolution of a fibre response function and an Orientation Distribution Function (ODF) describing fibre orientation probabilities. This allows extraction of fibre directions even in voxels with complex crossings.
+Two CSD approaches were used: the state-of-the-art Multi-Tissue CSD (MT-CSD), modeling three tissue types (white matter, gray matter, CSF) using global response functions, and the newer Local Response Function Estimation in Spherical Deconvolution (LoRE-SD), which estimates response functions locally in each voxel. LoRE-SD ODFs are unit-normalized and can be scaled to emphasize intra-axonal content, anisotropy, or white matter volume fraction.
+Results showed that significant findings depended on the ODF scaling. Notably, the fornix exhibited an increase in the metric extracted from the integral of the ODF lobes in CP compared to HC for both MT-CSD and WM-scaled LoRE-SD ODFs, suggesting compensatory mechanisms or network reorganization. However, the fornix is thin and close to the ventricles, making it prone to partial voluming and misregistration.
+This thesis shows that with CSD we can detect chemotherapy-related white matter changes and that LoRE-SD produces results consistent with MT-CSD while offering flexible metrics. Future studies should validate these metrics biologically and explore longitudinal effects including cognitive assessments.\\
 \\
 \textbf{Keywords:} Diffusion MRI, White matter microstructure, Constrained Spherical Deconvolution, Chemobrain % Keywords
 
 % ABSTRACT IN ITALIAN
 \chapter*{Abstract in lingua italiana}
-La risonanza magnetica pesata in diffusione offre un metodo non invasivo per studiare la microstruttura della sostanza bianca analizzando il movimento delle molecole d’acqua. Il metodo Constrained Spherical Deconvolution (CSD) separa il contributo di diversi fasci all’interno di un voxel, stimando l'Orientation Distribution Function (ODF), che descrive l’orientamento spaziale delle fibre nervose. Rispetto allo stato dell'arte Multi-Tissue CSD (MT-CSD), che utilizza funzioni di risposta predefinite per i tessuti, LoRE-SD stima la funzione di risposta localmente in ogni voxel, producendo ODF normalizzate scalabili per enfatizzare diversi compartimenti tissutali.
-Dalle ODF si estraggono i fixel, ciascuno rappresentante una popolazione di fibre orientate nella stessa direzione. La Fixel-Based Analysis (FBA) assegna metriche ai fixel e consente confronti tra gruppi. 
-In questa tesi, FBA è stata applicata allo studio del chemobrain, ovvero i sintomi cognitivi che possono manifestarsi dopo la chemioterapia. L’obiettivo era valutare per la prima volta LoRE-SD in un’analisi FBA e indagare differenze tra pazienti con tumore al seno trattate con chemioterapia e gruppi di controllo. Le ODF sono state calcolate con MT-CSD e LoRE-SD, utilizzando per quest’ultimo strategie di scalatura per enfatizzare contenuto intra-assonale, anisotropia o frazione di sostanza bianca. I risultati hanno mostrato che le regioni significative dipendono dal metodo di derivazione delle ODF e dal tipo di modulazione applicata, evidenziando la flessibilità di LoRE-SD.
-In particolare, la fornice è risultata una regione con un aumento significativo della metrica Apparent Fibre Density nelle pazienti rispetto ai controlli. Questo effetto potrebbe riflettere meccanismi compensatori o una riorganizzazione dei circuiti nervosi in risposta alla neuroinfiammazione indotta dalla chemioterapia. Tuttavia, la fornice è una struttura molto sottile e vicina ai ventricoli, quindi soggetta a effetti di volume parziale con il liquido cerebrospinale e ad errori di registrazione.
-La tesi dimostra il potenziale di LoRE-SD e FBA nello studio della sostanza bianca, pur evidenziando che l’interpretazione dei risultati resta limitata dalla scarsa conoscenza dei meccanismi patologici coinvolti.
-\\
+Con il numero di sopravvissuti al cancro in aumento, è importante studiare gli effetti della terapia sulla qualità della vita. La chemioterapia può provocare deficit cognitivi persistenti, noti come “chemobrain”, legati a modifiche della materia bianca. La risonanza magnetica pesata in diffusione (dMRI) è uno strumento utile per indagare queste alterazioni.
+In questa tesi sono stati analizzati dati di dMRI provenienti da tre gruppi di donne: pazienti con tumore al seno trattate con chemioterapia (CP), pazienti trattate con altre terapie (CM) e controlli sani (HC). Si è applicata la Constrained Spherical Deconvolution (CSD), che modella il segnale di diffusione come la convoluzione tra una funzione di risposta delle fibre e una Orientation Distribution Function (ODF), che descrive la probabilità di orientamento delle fibre permettendo di estrarne le direzioni anche in voxel con incroci complessi.
+Sono stati usati due approcci: il Multi-Tissue CSD (MT-CSD), che utilizza funzioni di risposta globali per i principali tipi di tessuto, e il più recente Local Response Function Estimation in Spherical Deconvolution (LoRE-SD), che stima funzioni di risposta localmente in ogni voxel. Le ODF di LoRE-SD, normalizzate, possono essere scalate per enfatizzare per esempio il contenuto intra-assonale o la frazione di materia bianca.
+Per LoRE-SD, i risultati sono dipesi dal fattore di scala usato per scalare le ODF. La fornice è risultata una regione con un aumento significativo della metrica derivata dall’integrale dei lobi delle ODF nei CP rispetto a HC sia con MT-CSD sia con LoRE-SD scalando per la frazione di materia bianca, suggerendo possibili meccanismi compensatori o riorganizzazione dei circuiti nervosi. Tuttavia, la fornice è sottile e vicina ai ventricoli, rendendola suscettibile a effetti di volume parziale e errori di registrazione.
+Questa tesi dimostra che la CSD può essere usata per rilevare alterazioni della materia bianca legate alla chemioterapia e che LoRE-SD può produrre risultati coerenti con MT-CSD, offrendo metriche flessibili. Studi futuri dovranno validare biologicamente queste metriche e indagare effetti longitudinali con valutazioni cognitive.\\
 \\
 \textbf{Parole chiave:} Risonanza magnetica pesata in diffusione, Microstruttura della sostanza bianca, Constrained Spherical Deconvolution, Chemobrain % Keywords (italian)
 
